// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 iIaspk sc-jgHCSr eBSLDm sc-gTgzoy jJyfcE"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 iIaspk sc-jgHCSr gfCRBx sc-gTgzoy jJyfcE"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 iIaspk sc-jgHCSr erHgUX sc-gTgzoy jJyfcE"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 iIaspk sc-jgHCSr eBSLDm sc-gTgzoy jJyfcE"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
